--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.23",
+    "multer": "^1.4.4",
     "prettier": "^2.6.2",
     "ts-node": "^10.7.0",
     "tsc-watch": "^5.0.3",
