--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/date-fns": "^2.6.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^2.7.11",
     "@types/node": "^17.0.23",
+    "aws-sdk": "^2.1116.0",
+    "dotenv": "^16.0.0",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "prettier": "^2.6.2",
     "ts-node": "^10.7.0",
     "tsc-watch": "^5.0.3",
