--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
+    "@types/busboy": "^1.5.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^8.2.0",
@@ -26,6 +27,7 @@
     "@types/multer-s3": "^2.7.11",
     "@types/node": "^17.0.23",
     "aws-sdk": "^2.1116.0",
+    "busboy": "^1.6.0",
     "dotenv": "^16.0.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
